Add permission node for linfo

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ kotlin_version=1.3.70
 #guiy before they are pushed to guiy's main repo.
 useLocalGuiy=false
 useLocalIdofront=false
-useLocalDeeperWorld=false
-useLocalGeary=false
+useLocalDeeperWorld=true
+useLocalGeary=true
