Stop using local

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ kotlin_version=1.3.70
 #guiy before they are pushed to guiy's main repo.
 useLocalGuiy=false
 useLocalIdofront=false
-useLocalDeeperWorld=true
-useLocalGeary=true
+useLocalDeeperWorld=false
+useLocalGeary=false
