Default curse scaling factor to 1, Softdepend on Geary

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,8 @@ version: @plugin_version@
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
 api-version: '1.15'
-softdepend: [Multiverse-Core]
-depend: [DeeperWorld, Vault, Geary]
+softdepend: [Multiverse-Core, Geary]
+depend: [DeeperWorld, Vault]
 
 prefix: MiB
 description: A mod that adds abyss effects
