Clean up gradle, switch to idofront command api update kotlin & spigot

--- a/build.gradle
+++ b/build.gradle
@@ -3,79 +3,39 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'java'
     id 'idea'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+    id 'com.github.johnrengelman.shadow'
+    id 'org.jetbrains.kotlin.jvm'
     id 'maven-publish'
+    id 'io.github.0ffz.github-packages'
 }
 
-group = 'com.derongan.minecraft'
-version = plugin_version
+group 'com.derongan.minecraft'
+version plugin_version
 
-if (project.hasProperty("buildNo")) {
-    version += "-" + buildNo
+if (project.hasProperty("buildNo")) version += ".$buildNo"
+
+java {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    withSourcesJar()
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven {
-        name = 'spigotmc-repo'
-        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
-    }
-    maven {
-        name = 'sonatype'
-        url = 'https://oss.sonatype.org/content/groups/public/'
-    }
-    maven { url 'https://erethon.de/repo/' } //HeadLib
     mavenLocal()
     jcenter()
-    maven {
-        name = "GitHubPackages-DeeperWorld"
-        url = uri("https://maven.pkg.github.com/MineInAbyss/DeeperWorld")
-        credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-        }
-    }
-    maven {
-        name = "GitHubPackages-guiy"
-        url = uri("https://maven.pkg.github.com/MineInAbyss/guiy")
-        credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-        }
-    }
-    maven {
-        name = "GitHubPackages-idofront"
-        url = uri("https://maven.pkg.github.com/MineInAbyss/Idofront")
-        credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-        }
-    }
-    maven {
-        name = "GitHubPackages-geary"
-        url = uri("https://maven.pkg.github.com/MineInAbyss/geary")
-        credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-        }
-    }
+    maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
+    maven { url 'https://oss.sonatype.org/content/groups/public/' }
+    maven { url 'https://erethon.de/repo/' } //HeadLib
+    maven githubPackage.invoke("MineInAbyss/guiy")
+    maven githubPackage.invoke("MineInAbyss/DeeperWorld")
+    maven githubPackage.invoke("MineInAbyss/Idofront")
+    maven githubPackage.invoke("MineInAbyss/geary")
     maven { url 'https://jitpack.io' } //JitPack
 }
 
 publishing {
     repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/MineInAbyss/MineInAbyss")
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-            }
-        }
+        maven githubPackage.invoke("MineInAbyss/MineInAbyss")
     }
     publications {
         gpr(MavenPublication) {
@@ -85,30 +45,22 @@ publishing {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
-    implementation 'de.erethon:headlib:3.0.2'
+    compileOnly "org.spigotmc:spigot-api:$server_version"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
-    compileOnly group: 'com.badlogicgames.ashley', name: 'ashley', version: '1.7.3'
+//    compileOnly 'com.badlogicgames.ashley:ashley:1.7.3'
 
-    if (useLocalGeary.toBoolean()) implementation project(':geary')
-    else implementation group: 'com.mineinabyss', name: 'geary', version: '1.0.+'
+    implementation 'de.erethon:headlib:3.0.4'
 
-    if (useLocalGuiy.toBoolean()) implementation project(':guiy')
-    else implementation group: 'com.derongan.minecraft', name: 'guiy', version: '0.1.+'
+    implementation 'com.mineinabyss:geary:1.0.+'
+    implementation 'com.derongan.minecraft:guiy:0.1.+'
+    implementation 'com.mineinabyss:idofront:0.3.1+'
+    compileOnly 'com.derongan.minecraft:deeperworld:0.1.4-alpha.21'
 
-    if (useLocalIdofront.toBoolean()) implementation project(':idofront')
-    else implementation group: 'com.mineinabyss', name: 'idofront', version: '0.1.+'
-
-    if (useLocalDeeperWorld.toBoolean()) implementation project(':DeeperWorld')
-    else implementation group: 'com.derongan.minecraft', name: 'deeperworld', version: '0.1.+'
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [plugin_version: plugin_version]
-    }
+    filter ReplaceTokens, tokens: [plugin_version: plugin_version]
 }
 
 shadowJar {
@@ -116,8 +68,7 @@ shadowJar {
     relocate 'com.derongan.minecraft.guiy', "com.derongan.minecraft.guiy.${project.group}.${project.name}"
     relocate 'com.mineinabyss.idofront', "com.mineinabyss.idofront.${project.group}.${project.name}"
     minimize {
-        exclude(dependency("org.jetbrains.kotlin:.*"))
-        exclude(dependency('de.erethon:headlib:3.0.2'))
+        exclude(dependency('de.erethon:headlib:.*'))
     }
 }
 build.dependsOn shadowJar
@@ -133,4 +84,6 @@ if (project.hasProperty("plugin_path") && plugin_path) {
         into plugin_path
     }
     build.dependsOn copyJar
+    if (useLocalDeeperWorld.toBoolean())
+        build.dependsOn gradle.includedBuild("DeeperWorld").task(':copyJar')
 }
