--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,8 @@ name: MineInAbyss
 version: @plugin_version@
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
-api-version: '1.15'
-softdepend: [Multiverse-Core, Geary]
+api-version: '1.16'
+softdepend: [Multiverse-Core, Geary, KotlinSpice]
 depend: [DeeperWorld, Vault]
 
 prefix: MiB
