--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,8 @@
-plugin_version=0.1.0-alpha
-kotlin_version=1.3.70
-
-#this should always be set to false in "production", enabling it is used to make any local additions to
-#guiy before they are pushed to guiy's main repo.
+plugin_version=0.1.1-alpha
+kotlin_version=1.4.0
+server_version=1.16.2-R0.1-SNAPSHOT
+#toggle composite builds
 useLocalGuiy=false
 useLocalIdofront=false
-useLocalDeeperWorld=false
 useLocalGeary=false
+useLocalDeeperWorld=false
