Clean up main plugin class

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ kotlin_version=1.4.0
 server_version=1.16.2-R0.1-SNAPSHOT
 #toggle composite builds
 useLocalGuiy=false
-useLocalIdofront=false
+useLocalIdofront=true
 useLocalGeary=false
 useLocalDeeperWorld=true
