--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement {
     plugins {
         id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+        id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
         id 'com.github.johnrengelman.shadow' version '6.0.0'
         id 'io.github.0ffz.github-packages' version '1.0.3'
     }
