--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
     maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'https://erethon.de/repo/' } //HeadLib
+    maven { url 'http://nexus.okkero.com/repository/maven-releases/' }
     maven githubPackage.invoke("MineInAbyss/guiy")
     maven githubPackage.invoke("MineInAbyss/DeeperWorld")
     maven githubPackage.invoke("MineInAbyss/Idofront")
@@ -53,6 +54,7 @@ dependencies {
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 //    compileOnly 'com.badlogicgames.ashley:ashley:1.7.3'
 
+    implementation "com.okkero.skedule:skedule:1.2.6"
     implementation 'de.erethon:headlib:3.0.4'
 
     implementation 'com.mineinabyss:geary:1.0.+'
