--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,10 @@ plugins {
     id 'io.github.0ffz.github-packages'
 }
 
+apply from: 'https://raw.githubusercontent.com/MineInAbyss/shared-gradle/master/common.gradle'
+
 group 'com.derongan.minecraft'
 version plugin_version
-
-if (project.hasProperty("buildNo")) version += ".$buildNo"
-
-java {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    withSourcesJar()
-}
 
 repositories {
     mavenCentral()
@@ -59,12 +54,8 @@ dependencies {
 
     implementation 'com.mineinabyss:geary:1.0.+'
     implementation 'com.derongan.minecraft:guiy:0.1.+'
-    implementation 'com.mineinabyss:idofront:0.3.24'
-    compileOnly 'com.derongan.minecraft:deeperworld:0.1.4-alpha.21'
-}
-
-processResources {
-    filter ReplaceTokens, tokens: [plugin_version: plugin_version]
+    implementation 'com.mineinabyss:idofront:0.3.25'
+    compileOnly 'com.derongan.minecraft:deeperworld:0.2.23'
 }
 
 shadowJar {
@@ -79,15 +70,3 @@ build.dependsOn shadowJar
 
 compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
 compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
-
-//Move into plugins folder
-if (project.hasProperty("plugin_path") && plugin_path) {
-    println("Copying to plugin directory $plugin_path")
-    task copyJar(type: Copy) {
-        from shadowJar // here it automatically reads jar file produced from jar task
-        into plugin_path
-    }
-    build.dependsOn copyJar
-//    if (useLocalDeeperWorld.toBoolean())
-//        build.dependsOn gradle.includedBuild("DeeperWorld").task(':copyJar')
-}
