--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-plugin_version=0.1.1-alpha
+plugin_version=0.2
 kotlin_version=1.4.0
 server_version=1.16.2-R0.1-SNAPSHOT
 #toggle composite builds
 useLocalGuiy=false
-useLocalIdofront=true
+useLocalIdofront=false
 useLocalGeary=false
-useLocalDeeperWorld=true
+useLocalDeeperWorld=false
