--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ version plugin_version
 repositories {
     mavenCentral()
     jcenter()
-    // maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
+    maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'https://erethon.de/repo/' } //HeadLib
     maven { url 'http://nexus.okkero.com/repository/maven-releases/' }
