--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,25 +1,32 @@
-name: Java CI
+name: Java CI with Gradle
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - '**.md'
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew shadow
-      - name: Upload artifact
-        uses: actions/upload-artifact@v1.0.0
+
+      - name: Build
+        run: gradle build
+
+      - name: Upload build
+        uses: actions/upload-artifact@v1
         with:
-          name: package
+          name: build
           path: build/libs
