--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -1,9 +1,11 @@
-name: Publish Snapshot
+name: Publish GitHub Packages
 
 on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
 
 jobs:
   build:
@@ -11,14 +13,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Publish artifact
+
+      - name: Publish to GitHub Packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run:
-          ./gradlew publish
+        run: gradle publish
