--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id 'java'
     id 'idea'
@@ -46,8 +44,11 @@ publishing {
 dependencies {
     compileOnly "org.spigotmc:spigot-api:$server_version"
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
-    compileOnly ('com.github.MilkBowl:VaultAPI:1.7') {
+
+    compileOnly platform("com.mineinabyss:kotlinspice:1.4.10-10")
+    compileOnly "com.okkero.skedule:skedule"
+
+    compileOnly('com.github.MilkBowl:VaultAPI:1.7') {
         exclude group: 'org.bukkit'
     }
 //    compileOnly 'com.badlogicgames.ashley:ashley:1.7.3'
@@ -55,10 +56,10 @@ dependencies {
     implementation "com.okkero.skedule:skedule:1.2.6"
     implementation 'de.erethon:headlib:3.0.4'
 
-    implementation 'com.mineinabyss:geary:1.0.3'
+    implementation 'com.mineinabyss:geary-spigot:0.2.21'
     implementation 'com.derongan.minecraft:guiy:0.1.0-alpha.7'
-    implementation 'com.mineinabyss:idofront:0.3.25'
-    compileOnly 'com.derongan.minecraft:deeperworld:0.3.32'
+    implementation "com.mineinabyss:idofront:0.5.6"
+    compileOnly 'com.derongan.minecraft:deeperworld:0.3.40'
 }
 
 shadowJar {
