Update to Kotlin 1.5.0, new geary version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,4 @@
-plugin_version=0.4
-kotlin_version=1.4.31
-server_version=1.16.5-R0.1-SNAPSHOT
-#toggle composite builds
-useLocalGuiy=false
-useLocalIdofront=false
-useLocalGeary=false
-useLocalDeeperWorld=false
+group=com.mineinabyss
+version=0.5
+kotlinVersion=1.5.0
+serverVersion=1.16.5-R0.1-SNAPSHOT
