--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MineInAbyss
-version: @plugin_version@
+version: ${plugin_version}
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
 api-version: '1.16'
