Start pin holder and dropping systems

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,8 @@ prefix: MiB
 description: A mod that adds abyss effects
 
 commands:
+  mineinabyss:
+    aliases: [ mia ]
   curseon:
     description: Turn on the curse of ascension
   curseoff:
