Update gradle conventions and to 1.17

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,9 @@ name: MineInAbyss
 version: ${plugin_version}
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
-api-version: '1.16'
-softdepend: [ Multiverse-Core, Geary, KotlinSpice ]
-depend: [ DeeperWorld, Vault ]
+api-version: 1.17
+softdepend: [ Multiverse-Core ]
+depend: [ DeeperWorld, Vault, Geary ]
 
 prefix: MiB
 description: A mod that adds abyss effects
