--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 group=com.mineinabyss
 version=0.5
-kotlinVersion=1.5.0
-serverVersion=1.16.5-R0.1-SNAPSHOT
+kotlinVersion=1.5.21
+miaConventionsVersion=1.5.21-14
+serverVersion=1.17.1-R0.1-SNAPSHOT
+idofrontVersion=1.17.1-0.6.23
