--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,8 @@ version: ${plugin_version}
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
 api-version: 1.17
-softdepend: [ Multiverse-Core ]
-depend: [ DeeperWorld, Vault, Geary ]
+softdepend: [ Multiverse-Core, DeeperWorld ] #FIXME depend on two plugins (Geary and DeeperWorld) breaks LibraryLoaderInjector
+depend: [ Vault, Geary ]
 
 prefix: MiB
 description: A mod that adds abyss effects
