add default config state

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,7 @@ x-particles-vomit: &vomit
 # effect names are each effect class' @SerialName
 storage:
   relicpath: "relics/"
+keepInvInVoid: true
 layers:
   - name: Orth
     sub: City of the Great Pit
