--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=com.mineinabyss
 version=0.5
-kotlinVersion=1.5.21
-miaConventionsVersion=1.5.21-14
+kotlinVersion=1.5.31
+idofrontConventions=1.5.31-34
 serverVersion=1.17.1-R0.1-SNAPSHOT
-idofrontVersion=1.17.1-0.6.23
+idofrontVersion=0.7.34
