Proper support for same command, tab completion, Update ECS deps

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 group=com.mineinabyss
 version=0.6
 kotlinVersion=1.5.31
-gearyVersion=0.8.67
-lootyVersion=0.3.35
-idofrontVersion=0.7.40
-idofrontConventions=1.5.31-40
+gearyVersion=0.9.70
+gearyAddonsVersion=0.1.14
+lootyVersion=0.3.36
+idofrontVersion=0.7.41
+idofrontConventions=1.5.31-41
 serverVersion=1.17.1-R0.1-SNAPSHOT
