guild system foundation

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ lootyVersion=0.3.36
 idofrontVersion=0.7.41
 idofrontConventions=1.5.31-41
 serverVersion=1.17.1-R0.1-SNAPSHOT
+exposedVersion=0.33.1
