Get project compiling

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 group=com.mineinabyss
 version=0.6
-kotlinVersion=1.5.31
-gearyVersion=0.10.71
-gearyAddonsVersion=0.1.14
-lootyVersion=0.3.36
-idofrontVersion=0.7.41
-idofrontConventions=1.5.31-41
+kotlinVersion=1.6.10
+gearyVersion=0.12.75
+mobzyVersion=0.12.41
+lootyVersion=0.4.37
+gearyAddonsVersion=0.2.15
+idofrontConventions=1.6.10-51
 serverVersion=1.17.1-R0.1-SNAPSHOT
