--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ gearyVersion=0.12.75
 mobzyVersion=0.12.41
 lootyVersion=0.4.37
 gearyAddonsVersion=0.2.15
+deeperWorldVersion=0.4.72
 idofrontConventions=1.6.10-51
 serverVersion=1.17.1-R0.1-SNAPSHOT
