--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ kotlinVersion=1.6.10
 gearyVersion=0.12.75
 mobzyVersion=0.12.41
 lootyVersion=0.4.37
+guiyVersion=0.2.6
 gearyAddonsVersion=0.2.15
 deeperWorldVersion=0.4.72
 idofrontConventions=1.6.10-53
