--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,7 +3,7 @@
 # Extensions
 x-particles-vomit: &vomit
   count: 30
-  duration: 10
+  duration: 10s
   iterations: 6
   offset: 3s
   particles: [ SLIME ]
@@ -21,6 +21,9 @@ features:
   - !<layers> {}
   - !<pins> {}
   - !<relics> {}
+  - !<guilds> {}
+  - !<orth_banking> {}
+  - !<adventure_pvp> {}
 layers:
   - name: Orth
     sub: City of the Great Pit
@@ -28,7 +31,7 @@ layers:
     depth:
       start: -1
       end: 0
-    sections: [ city ]
+    sections: [ section1 ]
     blockBlacklist:
       - LADDER
   - name: Edge of the Abyss
@@ -44,7 +47,7 @@ layers:
         effects: [ HUNGER ]
       - !<particles>
         <<: *vomit
-    sections: [ l1s1,l1s2,l1s3,l1s4,l1s5,l1s6 ]
+    sections: [ section2 ]
     blockBlacklist:
       - LADDER
-hubSectionName: city
+hubSectionName: section1
