--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,3 +48,8 @@ layers:
     blockBlacklist:
       - LADDER
 hubSectionName: city
+guilds:
+  maxLength: 20
+  bannedWords:
+    - example
+    - example2
