Update geary, add feature that loads all features

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,19 +11,7 @@ x-particles-vomit: &vomit
 # Layer config uses DeeperWorld sections
 # effect names are each effect class' @SerialName
 features:
-  - !<anticheese> {}
-  - !<curse> {}
-  - !<descent> {}
-  - !<enchants> {}
-  - !<exp> {}
-  - !<gondolas> {}
-  - !<hub_storage> {}
-  - !<layers> {}
-  - !<pins> {}
-  - !<relics> {}
-  - !<guilds> {}
-  - !<orth_banking> {}
-  - !<adventure_pvp> {}
+  - !<all> {}
 layers:
   - name: Orth
     sub: City of the Great Pit
