--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,9 @@
 group=com.mineinabyss
-version=0.6
+version=0.7
 kotlinVersion=1.6.10
-gearyVersion=0.12.77
-mobzyVersion=0.12.41
-lootyVersion=0.4.37
+gearyPlatformVersion=0.3.24
 guiyVersion=0.3.7
 gearyAddonsVersion=0.2.15
 deeperWorldVersion=0.4.72
-idofrontConventions=1.6.10-55
+idofrontConventions=1.6.10-59
 serverVersion=1.17.1-R0.1-SNAPSHOT
