--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ group=com.mineinabyss
 version=0.8
 kotlinVersion=1.6.10
 gearyPlatformVersion=0.4.25
-guiyVersion=0.3.9
+guiyVersion=0.4-alpha.10
 deeperWorldVersion=0.4.72
-idofrontConventions=1.6.10-65
+idofrontConventions=1.6.10-72
 serverVersion=1.18.2-R0.1-SNAPSHOT
