soften geary dependency

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,7 @@ version: ${plugin_version}
 author: Derongan
 main: com.mineinabyss.plugin.MineInAbyssPluginImpl
 api-version: 1.17
-depend: [ Geary, DeeperWorld, Guiy ]
-softdepend: [ Vault, Multiverse-Core ]
+softdepend: [ Vault, Multiverse-Core, Geary, DeeperWorld, Guiy ]
 
 prefix: MiB
 description: A mod that adds abyss effects
