--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ kotlinVersion=1.6.10
 gearyPlatformVersion=0.4.25
 guiyVersion=0.4-alpha.10
 deeperWorldVersion=0.4.72
-idofrontConventions=1.6.10-72
+idofrontVersion=0.9.80
 serverVersion=1.18.2-R0.1-SNAPSHOT
