--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 group=com.mineinabyss
 version=0.8
 kotlinVersion=1.6.10
+composeVersion=1.1.1
 gearyPlatformVersion=0.4.25
-guiyVersion=0.4-alpha.10
+guiyVersion=0.5.15
 deeperWorldVersion=0.4.72
-idofrontVersion=0.9.80
+idofrontVersion=0.9.86
 serverVersion=1.18.2-R0.1-SNAPSHOT
