--- a/gradle/mialibs.versions.toml
+++ b/gradle/mialibs.versions.toml
@@ -16,3 +16,4 @@ minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.2-SNAPSHOT"
 minecraft-plugin-gsit = "com.gecolay:gsit:1.0.6"
 minecraft-plugin-protocolburrito = "com.mineinabyss:protocolburrito:0.3.32"
 minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:0.5.0-SNAPSHOT"
+minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.25.1"
