--- a/gradle/mialibs.versions.toml
+++ b/gradle/mialibs.versions.toml
@@ -17,3 +17,4 @@ minecraft-plugin-gsit = "com.gecolay:gsit:1.0.6"
 minecraft-plugin-protocolburrito = "com.mineinabyss:protocolburrito:0.3.32"
 minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:0.5.0-SNAPSHOT"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.25.1"
+minecraft-plugin-luckperms = "net.luckperms:api:5.4"
