Wearable backpacks + HMCCosmetic integration (#157)
* initial commit

* make backpack cosmetic only show when player is wearing one

* fix cast to player

* final fixups

* changes

* changes2

* change3

* change gesture to string

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,9 +3,9 @@ version: ${plugin_version}
 author: Derongan
 main: com.mineinabyss.plugin.MineInAbyssPluginImpl
 api-version: 1.17
-softdepend: [ Vault, Multiverse-Core, Geary, DeeperWorld, Guiy, MCCosmetics ]
+softdepend: [ Vault, Multiverse-Core, Geary, DeeperWorld, Guiy, MCCosmetics, HMCCosmetics, GSit, DiscordSRV ]
 
-prefix: MiB
+prefix: MiA
 description: A mod that adds abyss effects
 
 commands:
