revert back to hmcc cus i hate myself

--- a/gradle/mialibs.versions.toml
+++ b/gradle/mialibs.versions.toml
@@ -16,5 +16,6 @@ minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.gecolay:gsit:1.0.7"
 minecraft-plugin-protocolburrito = "com.mineinabyss:protocolburrito:0.3.32"
 minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:1.0.0-SNAPSHOT"
+minecraft-plugin-hmccosmetics = "com.hibiscus:hmccosmetics:1.11.0"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.25.1"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
