--- a/gradle/mialibs.versions.toml
+++ b/gradle/mialibs.versions.toml
@@ -18,3 +18,4 @@ minecraft-plugin-protocolburrito = "com.mineinabyss:protocolburrito:0.3.32"
 minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:1.0.0-SNAPSHOT"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.25.1"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
+minecraft-plugin-imageloader = "com.combimagnetron:imageloader:1.0-SNAPSHOT"
