--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${plugin_version}
 author: Derongan
 main: com.mineinabyss.plugin.MineInAbyssPluginImpl
 api-version: 1.17
-softdepend: [ Vault, Multiverse-Core, Geary, DeeperWorld, Guiy, MCCosmetics, HMCCosmetics, GSit, DiscordSRV ]
+softdepend: [ Vault, Multiverse-Core, Geary, DeeperWorld, Guiy, Chatty, MCCosmetics, HMCCosmetics, GSit, DiscordSRV ]
 
 prefix: MiA
 description: A mod that adds abyss effects
