--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Derongan
 main: com.mineinabyss.plugin.MineInAbyssPluginImpl
 api-version: 1.17
 depend: [ Geary, DeeperWorld, Looty, Guiy ]
-softdepend: [ Vault, Multiverse-Core, MCCosmetics, HMCCosmetics, GSit, DiscordSRV, chatty, HappyHUD ]
+softdepend: [ Vault, Multiverse-Core, MCCosmetics, HMCCosmetics, GSit, DiscordSRV, chatty, HappyHUD, ModelEngine ]
 
 prefix: MiA
 description: A mod that adds abyss effects
