--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -7,7 +7,7 @@ deeperworld="0.6.82"
 chatty="0.3.53"
 mobzy="0.18.84"
 protocolburrito = "0.5.37"
-
+bondrewdlikeshisemotes = "1.1.3"
 
 [libraries]
 protocolburrito = { module = "com.mineinabyss:protocolburrito", version.ref = "protocolburrito" }
@@ -18,6 +18,7 @@ deeperworld = { module = "com.mineinabyss:deeperworld", version.ref = "deeperwor
 guiy = { module = "com.mineinabyss:guiy-compose", version.ref = "guiy" }
 chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
+bondrewdlikeshisemotes = { module = "io.github.bananapuncher714:bondrewdlikeshisemotes", version.ref = "bondrewdlikeshisemotes" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.gecolay:gsit:1.2.2"
