--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-geary = "0.20.114"
+geary = "0.20.115"
 gearyaddons = "0.7.46"
 looty = "0.8.69"
 guiy = "0.7.26"
-deeperworld = "0.6.84"
-chatty = "0.3.58"
-mobzy = "0.19.85"
+deeperworld = "0.6.85"
+chatty = "0.3.61"
+mobzy = "0.19.88"
 protocolburrito = "0.5.38"
 
 
@@ -20,9 +20,11 @@ chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
-minecraft-plugin-gsit = "com.gecolay:gsit:1.2.2"
+minecraft-plugin-gsit = "com.gecolay:gsit:1.2.4"
 minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:1.0.0-SNAPSHOT"
 minecraft-plugin-hmccosmetics = "com.hibiscus:hmccosmetics:1.11.2"
-minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.25.1"
+minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
+minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.2"
+minecraft-plugin-happyhud = "com.ehhtan:happyhud:0.1.6-SNAPSHOT"
 minecraft-plugin-modelengine = "com.ticxo.modelengine:api:R3.0.0"
