remove wraps dependency

--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -27,5 +27,5 @@ minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.2"
 minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:0.3.0-SNAPSHOT"
 minecraft-plugin-modelengine = "com.ticxo.modelengine:api:R3.0.0"
-minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
+#minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.16.3"
