--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Derongan
 main: com.mineinabyss.plugin.MineInAbyssPluginImpl
 api-version: 1.17
 depend: [ Geary, Geary-Commons, DeeperWorld, Looty, Guiy ]
-softdepend: [ Vault, Multiverse-Core, MCCosmetics, HMCCosmetics, GSit, DiscordSRV, chatty, ModelEngine, HappyHUD ]
+softdepend: [ Vault, Multiverse-Core, HMCCosmetics, GSit, DiscordSRV, chatty, ModelEngine, HappyHUD ]
 
 prefix: MiA
 description: A mod that adds abyss effects
