--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -4,7 +4,7 @@ gearyaddons = "0.7.46"
 looty = "0.8.69"
 guiy = "0.7.26"
 deeperworld = "0.6.85"
-chatty = "0.3.64"
+chatty = "0.3.99"
 mobzy = "0.19.88"
 protocolburrito = "0.5.38"
 
@@ -20,11 +20,12 @@ chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
-minecraft-plugin-gsit = "com.gecolay:gsit:1.2.4"
-minecraft-plugin-mccosmetics = "io.lumine:MCCosmetics-Dist:1.0.0-SNAPSHOT"
-minecraft-plugin-hmccosmetics = "com.hibiscus:hmccosmetics:1.11.2"
+minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.3.1"
+minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.2.7"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.2"
 minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:0.3.0-SNAPSHOT"
 minecraft-plugin-modelengine = "com.ticxo.modelengine:api:R3.0.0"
+#minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
+minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.16.5"
