--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -2,7 +2,7 @@
 gearyPaper = "0.24-SNAPSHOT"
 guiy = "0.7.26"
 deeperworld = "0.6.85"
-chatty = "0.3.99"
+chatty = "0.5.0"
 mobzy = "0.21-SNAPSHOT"
 protocolburrito = "0.5.38"
 
@@ -25,3 +25,6 @@ minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:0.3.0-SNAPSHOT"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.16.5"
 minecraft-plugin-modelengine = "com.ticxo.modelengine:api:R3.1.7"
+minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.19.4-v2-SNAPSHOT"
+minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.19.4-v2-SNAPSHOT"
+minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.19.3-v2"
